Fix Testimonios layout extra white space

--- a/assets/scss/partials/_custom.scss
+++ b/assets/scss/partials/_custom.scss
@@ -415,6 +415,14 @@ legend {
     padding-top: 20px;
 }
 
+.page-id-2285 hr {
+    margin: 10px;
+}
+
+.testimonio-lau {
+    margin-bottom: 10px;
+}
+
 
 /*================================
 =       Portafolio Page          =
